--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -25,7 +25,6 @@
 
   <!-- Global assets -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
   <script src="/reflections/assets/audio-system.js?v=12"></script>
   <link rel="manifest" href="/reflections/manifest.json?v=2">
   <link rel="apple-touch-icon" href="/reflections/icon-180.png">
@@ -41,7 +40,7 @@
       left: 0;
       right: 0;
       z-index: 1000;
-      background: #1f1815;
+      background: #fcf4f0;
       border-bottom: 1px solid rgba(255, 255, 255, 0.06);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
     }
@@ -252,8 +251,8 @@
        PAGE-SPECIFIC STYLES
     ========================== */
     body {
-      background: #1f1815;
-      color: #f3e6dd;
+      background: #ebe6e4;
+      color: #1c1105;
       font-family: "Georgia", "Times New Roman", serif;
       line-height: 1.75;
       margin: 0;
