--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -40,7 +40,7 @@
       left: 0;
       right: 0;
       z-index: 1000;
-      background: #fcf4f0;
+      background: #0d0602;
       border-bottom: 1px solid rgba(255, 255, 255, 0.06);
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
     }
