--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -319,47 +319,73 @@
 
   <!-- FIXED GLOBAL HEADER -->
   <header class="ref-header">
-    <div class="ref-header-inner">
+  <div class="ref-header-inner">
 
-      <!-- Left brand -->
-      <div class="ref-header-left">
-        <a href="/reflections/index.html" class="brand-link">
-          <span class="brand-mark">✦</span>
-          <span class="brand-text">
-            <span class="brand-title">Moments of Solitude</span>
-            <span class="brand-subtitle">Stone Grill Reflections</span>
-          </span>
-        </a>
-      </div>
+    <!-- LEFT AREA: Logo + Brand + Hamburger -->
+    <div class="ref-header-left">
+      <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">☰</button>
 
-      <!-- Center nav -->
-      <nav class="ref-nav" aria-label="Reflections navigation">
-        <ul>
-          <li><a href="/reflections/index.html">All Reflections</a></li>
-          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
-          <li><a href="/reflections/pages/divine-hiddeness/read.html">The Divine Premise</a></li>
-          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html" class="active">The Lost Language of Metaphor</a></li>
-          <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
-          <li><a href="/reflections/pages/initial-premise/read.html">The Fullness that Needs Nothing</a></li>
-        </ul>
-      </nav>
-
-      <!-- Right: badge + back + hamburger -->
-      <div class="ref-header-right">
-        <div class="current-page-badge">
-          <span class="page-icon">△</span>
-          <span class="page-label">The Lost Language of Metaphor</span>
-        </div>
-
-        <a href="/reflections/index.html" class="back-home-link">← Back to Reflections</a>
-
-        <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
-          ☰
-        </button>
-      </div>
-
+      <a href="/reflections/index.html" class="brand-link">
+        <img src="/reflections/assets/logo1.PNG" alt="Solitude Logo" class="brand-logo">
+        <span class="brand-text">
+          <span class="brand-title">Moments of Solitude</span>
+          <span class="brand-subtitle">Stone Grill Reflections</span>
+        </span>
+      </a>
     </div>
-  </header>
+
+    <!-- RIGHT AREA: Page Badge + Tools -->
+    <div class="ref-header-right">
+      <div class="header-actions">
+        <button id="btnBack" class="header-btn">Back</button>
+        <button id="btnShare" class="header-btn">Share</button>
+        <button id="btnAudio" class="header-btn">Audio</button>
+      </div>
+
+      <div class="current-page-badge">
+        <span id="current-page-icon" class="page-icon">△</span>
+        <span id="current-page-label" class="page-label">Reflection</span>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- SLIDING MENU PANEL -->
+  <nav class="ref-menu-panel">
+    <div class="ref-menu-card">
+      <div class="ref-menu-title">REFLECTIONS</div>
+      <ul class="ref-menu-list">
+
+        <li><a class="ref-menu-link" data-icon="△"
+               href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+
+        <li><a class="ref-menu-link" data-icon="◇"
+               href="/reflections/pages/divine-hiddeness/read.html">The Divine Premise</a></li>
+
+        <li><a class="ref-menu-link" data-icon="✺"
+               href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+
+        <li><a class="ref-menu-link" data-icon="♒"
+               href="/reflections/pages/echoes-of-survival/read.html">Echoes of Survival</a></li>
+
+        <li><a class="ref-menu-link" data-icon="❖"
+               href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
+
+        <li><a class="ref-menu-link" data-icon="☄"
+               href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+
+        <li><a class="ref-menu-link" data-icon="◎"
+               href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+
+        <li><a class="ref-menu-link" data-icon="▵"
+               href="/reflections/pages/initial-premise/read.html">The Fullness That Needs Nothing</a></li>
+
+      </ul>
+    </div>
+  </nav>
+
+  <div class="ref-menu-overlay"></div>
+</header>
 
   <main>
     <!-- ========== HEADER ========== -->
