--- a/reflections/pages/the-inner-listener/read.html
+++ b/reflections/pages/the-inner-listener/read.html
@@ -13,7 +13,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:title" content="PRAYER - The inner listener">
-  <meta property="og:image" content="theinnerlistener.jpg">
+  <meta property="og:image" content="prayer.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html">
 
   <!-- Main reflections styles -->
