--- a/reflections/index.html
+++ b/reflections/index.html
@@ -67,6 +67,50 @@
         </div>
       </article>
 
+            <!-- =========================================
+           CARD: THE SUBCONSCIOUS MIND
+           ========================================= -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/subconsciousmind/read.html" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/subconsciousmind/subconP.PNG"
+                 alt="The Subconscious Mind cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+
+        <div class="right">
+          <h3>
+            <a class="title-link" href="/reflections/pages/subconsciousmind/read.html" rel="noopener">
+              The Subconscious Mind
+            </a>
+          </h3>
+
+          <p>The silent architect of your identity — where prayer, memory, and desire shape who you become.</p>
+
+          <p class="meta">
+            First Edition 2025
+            <!-- Optional PDF link -->
+            <!-- • <a class="title-link" href="/reflections/pages/subconsciousmind/subconsciousmind.pdf" target="_blank" rel="noopener">PDF</a> -->
+          </p>
+
+          <!-- AUDIO PLAYER -->
+          <section class="audio-wrap" id="audioMount-subconsciousmind">
+            <p class="label">🎧 Audio Reflection: <strong>The Subconscious Mind</strong></p>
+            <audio controls preload="auto" style="width:100%">
+              <source src="/reflections/pages/subconsciousmind/subconsciousmind.mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+          </section>
+
+          <!-- SHARE BUTTONS -->
+          <div class="share-group"
+               data-share-url="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html"
+               data-share-title="The Subconscious Mind — Ninox Antolihao"></div>
+        </div>
+      </article>
+
       <!-- =========================================
            2) CARD: THE GOD WE CREATED
            ========================================= -->
