--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -9,11 +9,24 @@
 
   <!-- SEO -->
   <meta name="description" content="A reflection on the subconscious mind — the silent architect of identity and the inner bridge to the divine.">
-  <meta property="og:title" content="The Subconscious Mind: The Silent Architect of Your Identity">
+
+  <!-- SOCIAL PREVIEW / OG TAGS -->
+  <meta property="og:title" content="The Subconscious Mind — The Silent Architect of Your Identity">
   <meta property="og:description" content="A reflection on how the subconscious becomes the bridge between who you are and who you are becoming.">
-  <meta property="og:image" content="theinnerlistener.jpg">
+  <meta property="og:image" content="/reflections/pages/subconsciousmind/subconL.PNG">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   <meta property="og:type" content="article">
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-inner-listener/read.html">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html">
+
+  <!-- TWITTER / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="The Subconscious Mind">
+  <meta name="twitter:description" content="The Silent Architect of Your Identity">
+  <meta name="twitter:image" content="/reflections/pages/subconsciousmind/subconL.PNG">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html">
 
   <!-- Unified CSS -->
   <link rel="stylesheet" href="/reflections/assets/ref-header.css?v=2">
@@ -23,7 +36,6 @@
   <link rel="manifest" href="/reflections/manifest.json">
   <meta name="theme-color" content="#1f1815">
 </head>
-
 <body>
 
 <!-- FIXED HEADER -->
