--- a/reflections/index.html
+++ b/reflections/index.html
@@ -67,8 +67,8 @@
         </div>
       </article>
 
-            <!-- =========================================
-           CARD: THE SUBCONSCIOUS MIND
+        <!-- =========================================
+           12) CARD: THE SUBCONSCIOUS MIND
            ========================================= -->
       <article class="card">
         <div class="left">
@@ -95,7 +95,6 @@
             <!-- • <a class="title-link" href="/reflections/pages/subconsciousmind/subconsciousmind.pdf" target="_blank" rel="noopener">PDF</a> -->
           </p>
 
-          <!-- AUDIO PLAYER -->
           <section class="audio-wrap" id="audioMount-subconsciousmind">
             <p class="label">🎧 Audio Reflection: <strong>The Subconscious Mind</strong></p>
             <audio controls preload="auto" style="width:100%">
@@ -104,13 +103,12 @@
             </audio>
           </section>
 
-          <!-- SHARE BUTTONS -->
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html"
                data-share-title="The Subconscious Mind — Ninox Antolihao"></div>
         </div>
       </article>
-
+      
       <!-- =========================================
            2) CARD: THE GOD WE CREATED
            ========================================= -->
@@ -574,7 +572,7 @@ began to bind it.</p>
         </div>
       </article>
 
-      <!-- =========================================
+            <!-- =========================================
            11) CARD: THE MIRROR OF WORSHIP
            ========================================= -->
       <article class="card">
@@ -595,6 +593,8 @@ began to bind it.</p>
                data-share-title="The Mirror of Worship — Ninox Antolihao"></div>
         </div>
       </article>
+
+      
 
     </section>
   </main>
