--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -29,13 +29,15 @@
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html">
 
   <!-- Unified CSS -->
-  <link rel="stylesheet" href="/reflections/assets/ref-header.css?v=2">
+  <!-- Header styles file is in /reflections/, not /reflections/assets/ -->
+  <link rel="stylesheet" href="/reflections/ref-header.css?v=2">
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=2">
 
   <!-- PWA -->
   <link rel="manifest" href="/reflections/manifest.json">
   <meta name="theme-color" content="#1f1815">
 </head>
+
 <body>
 
 <!-- FIXED HEADER -->
@@ -56,29 +58,30 @@
   </nav>
 </header>
 
-
 <!-- MAIN CONTENT -->
 <div class="content">
 
   <!-- COVER IMAGE -->
   <div class="cover-wrapper">
-    <img src="theinnerlistener.jpg" alt="The Inner Listener — Cover" class="cover-image">
+    <!-- portrait cover for this reflection -->
+    <img src="subconP.PNG" alt="The Subconscious Mind — Cover" class="cover-image">
   </div>
 
   <!-- AUDIO PLAYER WITH 2 TRACKS -->
   <div class="audio-wrapper">
     <audio id="reflectionAudio" controls preload="metadata">
-      <source id="audioSource" src="subcon.mp3" type="audio/mpeg">
+      <!-- default track on load -->
+      <source id="audioSource" src="subconsciousmind.mp3" type="audio/mpeg">
     </audio>
 
     <div class="playlist">
       <div class="track" onclick="switchTrack(1)">
-        <div class="track-title">The Inner Listener — Track 1</div>
+        <div class="track-title">The Subconscious Mind — Track 1</div>
         <div class="track-desc">Narration Version 1</div>
       </div>
 
       <div class="track" onclick="switchTrack(2)">
-        <div class="track-title">The Inner Listener — Track 2</div>
+        <div class="track-title">The Subconscious Mind — Track 2</div>
         <div class="track-desc">Narration Version 2</div>
       </div>
     </div>
@@ -144,9 +147,11 @@ function switchTrack(num) {
   const audio = document.getElementById('reflectionAudio');
   const src = document.getElementById('audioSource');
   if (num === 1) {
-    src.src = "theinnerlistener.mp3";
+    // main narration file
+    src.src = "subconsciousmind.mp3";
   } else {
-    src.src = "theinnerlistener-alt.mp3";
+    // second version (rename if you use a different filename)
+    src.src = "subconsciousmind-alt.mp3";
   }
   audio.load();
   audio.play();
