--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -456,17 +456,24 @@
       </div>
 
       <!-- Center nav -->
+      <!-- Center nav -->
       <nav class="ref-nav" aria-label="Reflections navigation">
         <ul>
-          <li><a href="/reflections/index.html">All Reflections</a></li>
-          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
-          <li><a href="/reflections/pages/divine-hiddeness/read.html" class="active">The Divine Premise</a></li>
-          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
-          <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+          <li><a href="/reflections/index.html">HOME</a></li>
+          <li><a href="/reflections/pages/divine-hiddeness/read.html"class=active">Divine Premise</a></li>
           <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
-          <li><a href="/reflections/pages/initial-premise/read.html">The Fullness that Needs Nothing</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+           <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
+          <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
+          <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+         <li><a href="/reflections/pages/belief/read.html">BELIEF AND GOODNESS</a></li>
+          <li><a href="/reflections/pages/question-label-sinner/read.html">Seeking Asurance is Labeled A Sinner</a></li>
+          <li><a href="/reflections/pages/initial-premise/read.html">The initial Premise of a Perfect Loving God</a></li>
+          <li><a href="/reflections/pages/diety/read.html">THE DEITY</a></li>
         </ul>
       </nav>
+
 
       <!-- Right: page badge -->
       <div class="ref-header-right">
