--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -120,12 +120,38 @@
             </div>
             <div class="playlist-duration"> 4:33</div>
           </div>
-          
-
         </div>
       </div>
     </section>
+          <!-- AUDIO PLAYER + PLAYLIST -->
+      <section class="audio-wrap">
+        <div class="audio-wrapper">
+          <audio id="reflectionAudio" controls preload="metadata">
+            <source id="audioSource" src="" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
 
+          <div class="playlist">
+            <div class="playlist-row active"
+                 data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3">
+              <div class="playlist-main">
+                <div class="playlist-title">The Paradox of God</div>
+                <div class="playlist-sub">Main narration — quiet, reflective reading</div>
+              </div>
+              <div class="playlist-duration">--:--</div>
+            </div>
+
+            <div class="playlist-row"
+               data-src="/reflections/pages/transcendence/theshieldoftranscendence.mp3">
+            <div class="playlist-main">
+              <div class="playlist-title">The Shield Of Transcendence (Alternate Voice)</div>
+              <div class="playlist-sub">Cinematic or deeper-toned narration</div>
+            </div>
+            <div class="playlist-duration"> 4:33</div>
+            </div>
+          </div>
+        </div>
+      </section>
 
     <!-- ============================================================
          MAIN CONTENT (THE REFLECTION)
