--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -28,9 +28,8 @@
   <!-- Canonical -->
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html">
 
-  <!-- Unified CSS -->
-  <!-- Header styles file is in /reflections/, not /reflections/assets/ -->
-  <link rel="stylesheet" href="/reflections/ref-header.css?v=2">
+  <!-- Unified CSS (same pattern as your other pages) -->
+  <link rel="stylesheet" href="/reflections/assets/ref-header.css?v=2">
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=2">
 
   <!-- PWA -->
@@ -63,14 +62,12 @@
 
   <!-- COVER IMAGE -->
   <div class="cover-wrapper">
-    <!-- portrait cover for this reflection -->
     <img src="subconP.PNG" alt="The Subconscious Mind — Cover" class="cover-image">
   </div>
 
   <!-- AUDIO PLAYER WITH 2 TRACKS -->
   <div class="audio-wrapper">
     <audio id="reflectionAudio" controls preload="metadata">
-      <!-- default track on load -->
       <source id="audioSource" src="subconsciousmind.mp3" type="audio/mpeg">
     </audio>
 
@@ -146,13 +143,13 @@
 function switchTrack(num) {
   const audio = document.getElementById('reflectionAudio');
   const src = document.getElementById('audioSource');
+
   if (num === 1) {
-    // main narration file
-    src.src = "subconsciousmind.mp3";
+    src.src = "subconsciousmind.mp3";        // main version
   } else {
-    // second version (rename if you use a different filename)
-    src.src = "subconsciousmind-alt.mp3";
+    src.src = "subconsciousmind-alt.mp3";    // second version (change name if needed)
   }
+
   audio.load();
   audio.play();
 }
