--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -141,8 +141,8 @@
     }
 
     .ref-nav a.active {
-      background: #ff6b3d;
-      color: #1f1815;
+      background: #fca286;
+      color: #592f1d;
       border-color: #ff6b3d;
       font-weight: 600;
     }
@@ -224,7 +224,7 @@
     .nav-overlay {
       position: fixed;
       inset: 0;
-      background: rgba(0, 0, 0, 0.25);
+      background: rgba(0, 0, 0, 0.50);
       z-index: 500; /* below header(1000), above content */
       opacity: 0;
       pointer-events: none; /* key: never blocks */
@@ -437,7 +437,7 @@
                alt="Moments of Solitude"
                class="brand-logo">
           <span class="brand-text">
-            <span class="brand-title">Moments of Solitude</span>
+            <span class="brand-title">Divine Hiddeness</span>
             <span class="brand-subtitle">Stone Grill Reflections</span>
           </span>
         </a>
