--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -460,7 +460,7 @@
       <nav class="ref-nav" aria-label="Reflections navigation">
         <ul>
           <li><a href="/reflections/index.html">HOME</a></li>
-          <li><a href="/reflections/pages/divine-hiddeness/read.html"class=active">Divine Premise</a></li>
+          <li><a href="/reflections/pages/divine-hiddeness/read.html" class="active">Divine Premise</a></li>
           <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
           <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
            <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
