--- a/reflections/index.html
+++ b/reflections/index.html
@@ -591,12 +591,15 @@ began to bind it.</p>
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/mirror-of-worship/read.html"
                data-share-title="The Mirror of Worship — Ninox Antolihao"></div>
-        </div>
+        
+        <section class="audio-wrap" id="audioMount-diety">
+            <p class="label">🎧 Audio Reflection: <strong>The Diety</strong></p>
+            <audio controls preload="auto" style="width:100%">
+              <source src="/reflections/pages/mirror-of-worship/themirrorofworship.mp3" type="audio/mpeg">
+              Your browser does not support the audio element.
+            </audio>
+        </section>
       </article>
-
-      
-
-    </section>
   </main>
 
   <!-- FOOTER -->
