--- a/reflections/pages/mirror-of-worship/read.html
+++ b/reflections/pages/mirror-of-worship/read.html
@@ -8,41 +8,53 @@
   <meta name="description"
         content="A clear, practical reflection on worship—what it does to us, and how it shapes what we become." />
 
-  <link rel="icon" href="/reflections/assets/favicon.ico">
+  <link rel="icon" href="/reflections/assets/favicon.ico" />
 
   <!-- ===== UNIFIED REFLECTIONS HEADER CSS ===== -->
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=2" />
 
-  <!-- ===== SHARE + AUDIO LOCAL CSS ===== -->
+  <!-- ===== AUDIO + SHARE LOCAL CSS ===== -->
   <style>
     .audio-wrapper{
       margin: 12px auto 1.5rem;
       padding: 0 22px;
     }
-    audio{ width:100%; margin-bottom:6px; }
+    audio{
+      width:100%; margin-bottom:6px;
+    }
     .track-info{
-      font-size:.9rem; color:#c9b0a4; margin-bottom:8px;
-    }
-
-    /* Share buttons */
-    .share-box{
-      margin:1rem 0 1.4rem;
-      padding:0 22px;
-      display:flex; gap:.6rem; flex-wrap:wrap;
-    }
-    .share-btn{
-      padding:.55rem .9rem;
-      background:#ffffff10;
-      border:1px solid #6b5248;
-      border-radius:8px;
-      color:#ffd6a8;
       font-size:.9rem;
-      cursor:pointer;
+      color:#c9b0a4;
+      margin-bottom:8px;
     }
-  </style>
 
-  <!-- ===== PAGE DESIGN CSS (your original layout) ===== -->
-  <style>
+    /* Minimal Share Buttons */
+    .share-box{
+      padding: 0 22px;
+      margin: 1rem 0 1.4rem;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: .35rem;
+      color: var(--muted);
+      font-size: .9rem;
+    }
+    .share-label{ font-weight:600; }
+    .share-link{
+      background:none;
+      border:none;
+      padding:0;
+      color:var(--link);
+      cursor:pointer;
+      font-size:.9rem;
+    }
+    .share-link:hover{
+      text-decoration:underline;
+      opacity:.85;
+    }
+    .dot{ color:var(--muted); }
+
+    /* ===== PAGE DESIGN CSS ===== */
     :root{
       --bg:#1f1815;
       --paper:#2a211e;
@@ -65,10 +77,12 @@
     a:hover{text-decoration:underline}
 
     .page{ max-width:860px; margin:0 auto; padding:32px 20px 96px; }
+
     .paper{
       background:var(--paper);
       border-radius:14px;
-      box-shadow:0 10px 30px rgba(0,0,0,.35), inset 0 1px 0 rgba(255,255,255,.04);
+      box-shadow:0 10px 30px rgba(0,0,0,.35),
+                  inset 0 1px 0 rgba(255,255,255,.04);
       overflow:hidden;
     }
 
@@ -80,8 +94,10 @@
       border-bottom:1px dashed var(--rule);
       align-items:center;
     }
+
     .cover img{
-      width:100%;border-radius:10px;
+      width:100%;
+      border-radius:10px;
       background:#0002;
     }
 
@@ -92,7 +108,10 @@
 
     .meta{color:var(--muted);font-size:.95rem;margin:.25rem 0 .75rem;}
 
-    .actions{display:flex;flex-wrap:wrap;gap:.5rem;margin-top:.25rem}
+    .actions{
+      display:flex;flex-wrap:wrap;gap:.5rem;margin-top:.25rem;
+    }
+
     .btn{
       padding:.55rem .9rem;
       border:1px solid var(--rule);
@@ -125,19 +144,30 @@
 
     p{margin:.9rem 0}
     .lead{font-size:1.1rem}
+
     .dropcap:first-letter{
-      float:left;font-size:3rem;line-height:1;padding-right:.28rem;
-      margin-top:.2rem;font-weight:700;color:var(--accent);
+      float:left;font-size:3rem;line-height:1;
+      padding-right:.28rem;
+      margin-top:.2rem;
+      font-weight:700;
+      color:var(--accent);
     }
 
     blockquote{
       border-left:3px solid var(--accent);
       background:rgba(255,255,255,.03);
-      padding:.75rem 1rem;margin:1rem 0;font-style:italic;
+      padding:.75rem 1rem;
+      margin:1rem 0;
+      font-style:italic;
     }
 
-    .divider{text-align:center;color:var(--muted);margin:1.1rem 0;letter-spacing:.35em}
-    .divider::before{content:"— ❖ —"}
+    .divider{
+      text-align:center;
+      color:var(--muted);
+      margin:1.1rem 0;
+      letter-spacing:.35em;
+    }
+    .divider::before{ content:"— ❖ —"; }
 
     h2{
       font-size:clamp(1.25rem,2.5vw,1.6rem);
@@ -150,7 +180,9 @@
       font-size:.95rem;
       border-top:1px dashed var(--rule);
       margin-bottom:24px;
-      display:flex;justify-content:space-between;flex-wrap:wrap;
+      display:flex;
+      justify-content:space-between;
+      flex-wrap:wrap;
       padding-top:10px;
     }
   </style>
@@ -158,14 +190,14 @@
 
 <body>
 
-  <!-- ===== UNIFIED HEADER (hamburger + navigation) ===== -->
+  <!-- ===== UNIFIED HEADER ===== -->
   <div id="refHeader"></div>
   <script src="/reflections/assets/reflections-header.js?v=2"></script>
 
   <main class="page">
     <article class="paper">
 
-      <!-- ===== AUDIO PLAYER (2 TRACKS) ===== -->
+      <!-- ===== AUDIO PLAYER WITH TRACK SWITCH ===== -->
       <section class="audio-wrapper">
         <div class="track-info" id="trackLabel">Track 1 — The Mirror of Worship</div>
 
@@ -175,10 +207,10 @@
                   type="audio/mpeg">
         </audio>
 
-        <!-- Track selector -->
         <div class="share-box" style="margin-top:0;">
-          <button class="share-btn" onclick="switchTrack(1)">Track 1</button>
-          <button class="share-btn" onclick="switchTrack(2)">Track 2</button>
+          <button class="share-link" onclick="switchTrack(1)">Track 1</button>
+          <span class="dot">·</span>
+          <button class="share-link" onclick="switchTrack(2)">Track 2</button>
         </div>
       </section>
 
@@ -200,19 +232,23 @@
         }
       </script>
 
-      <!-- ===== SHARE BUTTONS ===== -->
+      <!-- ===== MINIMAL SHARE BUTTONS ===== -->
       <section class="share-box">
-        <button class="share-btn"
-                onclick="window.open('https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href),'_blank')">
-          Share on Facebook
+        <span class="share-label">Share:</span>
+        <button class="share-link"
+                onclick="window.open('https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent(location.href))">
+          Facebook
         </button>
+        <span class="dot">·</span>
 
-        <button class="share-btn"
-                onclick="window.open('fb-messenger://share/?link='+encodeURIComponent(location.href),'_blank')">
+        <button class="share-link"
+                onclick="window.open('fb-messenger://share/?link='+encodeURIComponent(location.href))">
           Messenger
         </button>
+        <span class="dot">·</span>
 
-        <button class="share-btn" onclick="navigator.clipboard.writeText(location.href)">
+        <button class="share-link"
+                onclick="navigator.clipboard.writeText(location.href)">
           Copy Link
         </button>
       </section>
@@ -253,9 +289,8 @@
       </header>
 
       <!-- ===== MAIN CONTENT ===== -->
-      <section class="content" id="content">
-        <!-- Your full reflection content remains unchanged (already included from previous message)
-             If you want me to reinsert the entire body again, just say “send full content.” -->
+      <section class="content">
+        <!-- Your full reflection content goes here — unchanged -->
       </section>
 
       <footer>
