--- a/reflections/pages/mirror-of-worship/read.html
+++ b/reflections/pages/mirror-of-worship/read.html
@@ -289,7 +289,14 @@
                alt="The Mirror of Worship — cover"
                onerror="this.src='/reflections/assets/cover-fallback.png'">
         </a>
-
+      <!-- 🔊 AUDIO: inserted, design untouched -->
+      <section class="audio-wrapper">
+        <div class="audio-caption">Listen — The Mirror of Worship</div>
+        <audio controls preload="metadata">
+          <source src="/reflections/pages/mirror-of-worship/themirrorofworship.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+      </section>
         <div>
           <h1><a href="/reflections/pages/mirror-of-worship/mirror-of-worship.pdf" title="Open PDF">The Mirror of Worship</a></h1>
           <div class="meta">By <strong>Ninox Antolihao</strong> • Stone Grill Press • First Edition — 2025</div>
