--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -28,9 +28,164 @@
   <!-- Canonical -->
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/subconsciousmind/read.html">
 
-  <!-- Unified CSS (same pattern as your other pages) -->
-  <link rel="stylesheet" href="/reflections/assets/ref-header.css?v=2">
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=2">
+  <!-- Global CSS (same as your index page) -->
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=18">
+
+  <!-- Simple inline header styles so this page is not broken
+       even if ref-header.css is missing or mis-pathed -->
+  <style>
+    .ref-header {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      background:#1f1815;
+      color:#fbe9dc;
+      padding:.75rem 1rem;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:1rem;
+      border-bottom:1px solid rgba(255,255,255,0.1);
+    }
+    .ref-header .logo {
+      font-weight:700;
+      text-decoration:none;
+      color:inherit;
+      white-space:nowrap;
+    }
+    .ref-header .header-title {
+      font-size:.85rem;
+      line-height:1.3;
+      flex:1;
+    }
+    .hamburger {
+      border:none;
+      background:#fbe9dc;
+      color:#1f1815;
+      border-radius:4px;
+      padding:.25rem .5rem;
+      font-size:1.1rem;
+      cursor:pointer;
+    }
+    .header-menu {
+      position:fixed;
+      top:3rem;
+      right:1rem;
+      background:#1f1815;
+      border:1px solid rgba(255,255,255,0.12);
+      border-radius:6px;
+      padding:.5rem 0;
+      display:none;
+      flex-direction:column;
+      min-width:220px;
+    }
+    .header-menu a {
+      display:block;
+      padding:.4rem .9rem;
+      font-size:.85rem;
+      color:#fbe9dc;
+      text-decoration:none;
+      white-space:normal;
+    }
+    .header-menu a:hover,
+    .header-menu a.active {
+      background:rgba(255,255,255,0.06);
+    }
+    .header-menu.open {
+      display:flex;
+    }
+
+    @media (min-width: 900px) {
+      .ref-header {
+        padding:.9rem 3rem;
+      }
+      .header-title {
+        text-align:center;
+        font-size:1rem;
+      }
+      .header-menu {
+        position:static;
+        display:flex !important;
+        flex-direction:row;
+        border:none;
+        padding:0;
+        background:transparent;
+        min-width:0;
+        gap:.75rem;
+      }
+      .header-menu a {
+        padding:0;
+        font-size:.8rem;
+        opacity:.7;
+      }
+      .header-menu a:hover,
+      .header-menu a.active {
+        background:none;
+        opacity:1;
+      }
+      .hamburger {
+        display:none;
+      }
+    }
+
+    .cover-wrapper {
+      margin:1.5rem auto 1rem;
+      max-width:420px;
+    }
+    .cover-image {
+      display:block;
+      width:100%;
+      height:auto;
+      border-radius:10px;
+      box-shadow:0 18px 40px rgba(0,0,0,0.7);
+    }
+    .audio-wrapper {
+      max-width:540px;
+      margin:1.5rem auto 1rem;
+    }
+    .playlist {
+      margin-top:.75rem;
+      border-radius:8px;
+      border:1px solid rgba(255,255,255,0.08);
+      overflow:hidden;
+    }
+    .track {
+      padding:.5rem .75rem;
+      cursor:pointer;
+      border-bottom:1px solid rgba(255,255,255,0.06);
+    }
+    .track:last-child {
+      border-bottom:none;
+    }
+    .track-title {
+      font-size:.9rem;
+      font-weight:600;
+    }
+    .track-desc {
+      font-size:.75rem;
+      opacity:.8;
+    }
+    .track:hover {
+      background:rgba(255,255,255,0.04);
+    }
+    .reflection-text h1 {
+      margin-top:2rem;
+      margin-bottom:1.25rem;
+    }
+    .share-wrapper {
+      margin:2rem auto 3rem;
+      text-align:center;
+    }
+    .share-wrapper button {
+      padding:.6rem 1.4rem;
+      border-radius:999px;
+      border:1px solid #ff6b3d;
+      background:#ff6b3d;
+      color:#1f1815;
+      font-weight:600;
+      cursor:pointer;
+    }
+  </style>
 
   <!-- PWA -->
   <link rel="manifest" href="/reflections/manifest.json">
@@ -47,13 +202,22 @@
     The Subconscious Mind: The Silent Architect of Your Identity
   </div>
 
-  <button class="hamburger" onclick="toggleMenu()">☰</button>
+  <button class="hamburger" type="button" onclick="toggleMenu()">☰</button>
 
   <nav class="header-menu" id="headerMenu">
     <a href="/reflections/index.html">All Reflections</a>
+    <a href="/reflections/pages/divine-hiddeness/read.html">Divine Premise</a>
+    <a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a>
     <a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a>
+    <a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a>
+    <a href="/reflections/pages/transcendence/read.html">Transcendence</a>
+    <a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a>
     <a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a>
-    <!-- add more links as you create pages -->
+    <a href="/reflections/pages/belief/read.html">Belief and Goodness</a>
+    <a href="/reflections/pages/question-label-sinner/read.html">Seeking Assurance is Labeled a Sinner</a>
+    <a href="/reflections/pages/initial-premise/read.html">The Initial Premise of a Perfect Loving God</a>
+    <a href="/reflections/pages/diety/read.html">The Deity</a>
+    <a href="/reflections/pages/subconsciousmind/read.html" class="active">The Subconscious Mind</a>
   </nav>
 </header>
 
@@ -62,12 +226,14 @@
 
   <!-- COVER IMAGE -->
   <div class="cover-wrapper">
+    <!-- portrait cover for this reflection -->
     <img src="subconP.PNG" alt="The Subconscious Mind — Cover" class="cover-image">
   </div>
 
   <!-- AUDIO PLAYER WITH 2 TRACKS -->
   <div class="audio-wrapper">
     <audio id="reflectionAudio" controls preload="metadata">
+      <!-- default track on load -->
       <source id="audioSource" src="subconsciousmind.mp3" type="audio/mpeg">
     </audio>
 
@@ -83,6 +249,7 @@
       </div>
     </div>
   </div>
+
 
   <!-- REFLECTION TEXT -->
   <article class="reflection-text">
