--- a/reflections/pages/subconsciousmind/read.html
+++ b/reflections/pages/subconsciousmind/read.html
@@ -234,7 +234,7 @@
   <div class="audio-wrapper">
     <audio id="reflectionAudio" controls preload="metadata">
       <!-- default track on load -->
-      <source id="audioSource" src="subconsciousmind.mp3" type="audio/mpeg">
+      <source id="audioSource" src="subcon.mp3" type="audio/mpeg">
     </audio>
 
     <div class="playlist">
