--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -4,9 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- ============================================================
-       SEO + SOCIAL META TAGS  (FINAL CLEAN VERSION)
-  ============================================================ -->
+      <!-- ==== SEO + SOCIAL META TAGS  (FINAL CLEAN VERSION) ============ -->
   <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
 
   <meta name="description"
@@ -25,7 +23,7 @@
   <meta property="og:url"
         content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
-  <!-- Twitter -->
+    <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
   <meta name="twitter:description"
@@ -33,7 +31,7 @@
   <meta name="twitter:image"
         content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg">
 
-  <!-- JSON-LD -->
+    <!-- JSON-LD -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -59,9 +57,7 @@
   }
   </script>
 
-  <!-- ============================================================
-       UNIFIED REFLECTIONS CSS
-  ============================================================ -->
+        <!-- =============UNIFIED REFLECTIONS CSS ====================== -->
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=23">
 
 </head>
@@ -69,17 +65,13 @@
 
 <body>
 
-  <!-- ============================================================
-       UNIFIED HEADER PLACEHOLDER  (auto-loaded by JS)
-  ============================================================ -->
+        <!-- =========UNIFIED HEADER PLACEHOLDER  (auto-loaded by JS) ======= -->
   <div id="ref-header-placeholder"></div>
 
 
   <main class="page-content">
 
-    <!-- ============================================================
-         PAGE TITLE + SUBTITLE
-    ============================================================ -->
+         <!-- ==================   PAGE TITLE + SUBTITLE ======================= -->
     <header class="page-header" style="max-width:800px;margin:0 auto 1rem auto;">
       <h1>The Paradox of God</h1>
       <p class="page-subtitle">A Solitude Reflection by Ninox Antolihao</p>
@@ -104,7 +96,7 @@
                  data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3">
               <div class="playlist-main">
                 <div class="playlist-title">The Paradox of God</div>
-                <div class="playlist-sub">Main narration — quiet, reflective reading</div>
+                <div class="playlist-sub">Belief is the bridge we build across uncertainty — but truth is the ocean beneath it. We walk on belief because we fear the deep — the unknown, the silence, the mystery</div>
               </div>
               <div class="playlist-duration">--:--</div>
             </div>
@@ -113,7 +105,7 @@
                data-src="/reflections/pages/transcendence/theshieldoftranscendence.mp3">
             <div class="playlist-main">
               <div class="playlist-title">The Shield Of Transcendence (Alternate Voice)</div>
-              <div class="playlist-sub">Cinematic or deeper-toned narration</div>
+              <div class="playlist-sub">Unwraveling the enigma of absolute Truth</div>
             </div>
             <div class="playlist-duration"> 4:33</div>
             </div>
@@ -121,9 +113,7 @@
         </div>
       </section>
 
-    <!-- ============================================================
-         MAIN CONTENT (THE REFLECTION)
-    ============================================================ -->
+            <!-- ============== MAIN CONTENT (THE REFLECTION) ================= -->
     <div class="content">
 
       <p>Anyone who claims to know the full truth about God speaks from illusion. For how can the finite explain the infinite? How can a single mind, bound by language and time, contain something that has no edges, no beginning, no name?</p>
@@ -149,25 +139,18 @@
     </div>
 
 
-    <!-- ============================================================
-         FOOTER
-    ============================================================ -->
+          <!--================ FOOTER ================ -->
     <footer>
       <p>© 2025 Ninox Antolihao · First Edition — Stone Grill Press · Leyte, Philippines</p>
     </footer>
 
   </main>
 
-
-  <!-- ============================================================
-       UNIFIED HEADER JS + MENU LOGIC
-  ============================================================ -->
+          <!-- =========== UNIFIED HEADER JS + MENU LOGIC =================== -->
   <script src="/reflections/assets/reflections-header.js?v=22" defer></script>
 
 
-  <!-- ============================================================
-       SERVICE WORKER  (PWA OFFLINE SUPPORT)
-  ============================================================ -->
+          <!-- =========== SERVICE WORKER  (PWA OFFLINE SUPPORT) =================== -->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('/reflections/sw.js')
