--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -71,17 +71,46 @@
 
   <main class="page-content">
 
-         <!-- ==================   PAGE TITLE + SUBTITLE ======================= -->
-    <header class="page-header" style="max-width:800px;margin:0 auto 1rem auto;">
-      <h1>The Paradox of God</h1>
-      <p class="page-subtitle">A Solitude Reflection by Ninox Antolihao</p>
-
-      <div class="scrolling-subtitle">
-        <span>
-          A meditation on belief, truth, and the mystery that cannot be named.
-        </span>
+    <header class="ms-header">
+  <div class="ms-top">
+    <div class="ms-logo">
+      <img src="/reflections/assets/logo1.PNG" alt="Moments of Solitude" />
+      <div class="ms-title-group">
+        <h2>MOMENTS OF SOLITUDE</h2>
+        <span>Stone Grill Reflections</span>
       </div>
-    </header>
+    </div>
+
+    <div class="ms-controls">
+      <button onclick="history.back()">Back</button>
+      <button onclick="shareReflection()">Share</button>
+      <button onclick="document.getElementById('reflectionAudio').scrollIntoView({behavior:'smooth'})">Audio</button>
+      <span class="ms-current">△ The Paradox of God</span>
+    </div>
+  </div>
+
+  <ul class="ms-nav">
+  <li><a href="/reflections/index.html">HOME</a></li>
+  <li><a href="/reflections/pages/divine-hiddeness/read.html" class="active">Divine Premise</a></li>
+  <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
+  <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+  <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+  <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
+  <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
+  <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+  <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+  <li><a href="/reflections/pages/belief/read.html">BELIEF AND GOODNESS</a></li>
+  <li><a href="/reflections/pages/question-label-sinner/read.html">Seeking Asurance is Labeled A Sinner</a></li>
+  <li><a href="/reflections/pages/initial-premise/read.html">The initial Premise of a Perfect Loving God</a></li>
+  <li><a href="/reflections/pages/diety/read.html">THE DEITY</a></li>
+  <li><a href="/reflections/pages/question-label-sinner/read.html">Labeled Sinner</a></li>
+  <li><a href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
+  <li><a href="/reflections/pages/oneness-duality/read.html">Oneness Duality</a></li>
+  <li><a href="/reflections/pages/mirror-of-worship/read.html">The Mirror of Worship</a></li>
+</ul>
+
+</header>
+
 
           <!-- AUDIO PLAYER + PLAYLIST -->
       <section class="audio-wrap">
